[package]
name = "kpm"
version = "0.1.0"
authors = ["Emil <esandin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.13.0"
async-std = { version = "1.6.0", features = ["attributes"] }
tera = "1.5.0"
# TODO Use release when possible: https://github.com/jbr/tide-tera/issues/3
tide-tera = { git = "https://github.com/jbr/tide-tera", branch = "main" }
md5 = "0.7.0"
httpdate = "0.3.1"
