[package]
name = "kpm"
version = "0.1.0"
authors = ["Emil <esandin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.13.0"
async-std = { version = "1.6.0", features = ["attributes"] }
tera = "1.5.0"
tide-tera = "0.2.0"
md5 = "0.7.0"
httpdate = "0.3.1"
surf = { version = "2.0.0", default-features = false, features = ["h1-client"] }
serde = { version = "1.0.0", features = ["derive"] }
